--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in ornare tortor. Phasellus molestie est vitae tortor commodo egestas eget sit amet ex. Cras imperdiet arcu eget purus mattis pellentesque. Integer sed nisl mi. Aliquam risus orci, dapibus et aliquet sit amet, auctor nec ligula. Sed porttitor lorem at sem rhoncus, luctus eleifend mauris vestibulum. Nam egestas tortor non metus suscipit, non tempus risus porta. Nulla venenatis interdum ante eu sodales. Cras vulputate ultricies tristique. In hac habitasse platea dictumst. In ullamcorper, sem at porttitor elementum, arcu est ultrices massa, sit amet blandit massa justo eget tellus. Donec molestie ut sem varius bibendum. Proin pharetra nibh a ex tristique porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
 		
 	<h2>2. Avatar</h2>
-		<img class= "avatar" src="images/avatar.jpg">
+		<img class= "avatar" src="Images/avatar.jpg">
 
 	<h2>3. Button</h2>
 		<a href="#" class="btn-blue"> Submit </a>
@@ -33,15 +33,15 @@
 
 	<div class="cards">
 		<div class="card">
-			<img src="images/holder.png" alt=" Pupe t-shirt">
+			<img src="Images/holder.png" alt=" Pupe t-shirt">
 			<h3> your new t-shirt here</h3>	
 		</div>
 		<div class="card">
-			<img src="images/holder.png" alt=" Pupe t-shirt">
+			<img src="Images/holder.png" alt=" Pupe t-shirt">
 			<h3> your new t-shirt here</h3>	
 		</div>
 		<div class="card">
-			<img src="images/holder.png" alt=" Pupe t-shirt">
+			<img src="Images/holder.png" alt=" Pupe t-shirt">
 			<h3> your new t-shirt here</h3>	
 		</div>
 	</div>
